--- a/site/styles/style2/css2.css
+++ b/site/styles/style2/css2.css
@@ -1,3 +1,173 @@
 body{
-    background-color: lightblue;
+    background-color: white;
+    font-family: "Roboto", Arial, SansSerif;
+    min-height: 100vh;
+    height: 100vh;
+}
+
+/*Button swap CSS*/
+.swapBg{
+    margin-top: 20px;
+    margin-right: 5px;
+    background-color: rgba(61, 216, 255, 0.37);
+    text-align: center;
+    color: #053b8d;
+    font-weight: bold;
+    cursor: pointer;
+
+    float: right;
+    margin-left: 92%;
+    position: fixed;
+    right: 0;
+    border-radius: 100px;
+}
+
+.swapBg span{
+    line-height: 100px;
+}
+
+.swapBg:hover{
+    background-color: rgba(77, 226, 255, 0.82);
+}
+
+/*Sidebar*/
+.sidebar {
+    display: block;
+    float: right;
+    width: 15%;
+
+    height: 100%;
+    color: black;
+    margin-right: 5%;
+    padding-left: 20px;
+}
+
+.sidebar .sideMenu{
+
+    position: fixed;
+    border-left: gray solid 1px;
+}
+
+.sidebar .sideMenu ul li a:active{
+    text-decoration: none;
+    color: black;
+}
+
+.sidebar .sideMenu ul li{
+    font-weight: bolder;
+    font-size: 1.1em;
+}
+
+.sidebar .sideMenu ul ul li{
+    font-weight: normal;
+    font-size: 1.1em;
+}
+
+.sidebar .sideMenu ul li a{
+    text-decoration: none;
+    color: black;
+}
+
+.sidebar .sideMenu ul li{
+    list-style-type: none;
+    padding: 5px;
+    transition: background-color 0.5s, border 0.2s;
+}
+
+.sidebar .sideMenu ul li:hover{
+    background-color: rgba(3, 0, 55, 0.35);
+    border-left: 3px solid black;
+}
+
+/*Top menu*/
+.menu ul li{
+    list-style-type: none;
+    /*border-right: solid 1px #363d7c;*/
+    border-left: solid 1px #363d7c;
+}
+
+.menu ul li:last-of-type{
+    list-style-type: none;
+    border-right: solid 1px #363d7c;
+}
+
+.menu ul li:first-of-type{
+    list-style-type: none;
+    border-left: solid 1px #363d7c;
+}
+
+hr .vertical{
+    width: 0;
+    height: 100%;
+}
+
+header h1{
+    text-align: center;
+    width: 20%;
+    display: table;
+}
+
+.menu{
+    display: flex;
+    background-color: cornflowerblue;
+    width: 100%;
+}
+
+.menu ul li{
+    display: inline;
+
+    /*trocar por padding: apx bpx cpx dpx;*/
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+
+    font-size: 1.5em;
+    transition: background-color 0.4s;
+}
+
+.menu ul li:hover{
+    background-color: rgba(0, 0, 0, 0.52);
+}
+
+.menu ul{
+    width: 100%;
+}
+
+
+header{
+    margin-top: -21px;
+    width: 100%;
+    display: block;
+    background: url("../../media/images/pictures/bg4.jpg") left;
+}
+
+.css1{
+    visibility: hidden;
+}
+
+.icon{
+    min-height: 100px;
+    min-width: 100px;
+    float: left;
+    margin: 5px;
+    left: 0;
+    right: auto;
+    display: block;
+}
+
+
+
+.content{
+    float: left;
+    width: 70%;
+    margin-left: 5%;
+    background-color: rgba(249, 249, 249, 0.15);
+}
+
+.footer{
+    position: relative;
+    display: block;
+    float: left;
+    background-color: cornflowerblue;
 }
