--- a/site/styles/style1/css1.css
+++ b/site/styles/style1/css1.css
@@ -1,10 +1,22 @@
 body{
     background: white url("../../media/images/pictures/bg16.jpg") center ;
-
     background-size: contain;
     color: whitesmoke;
-    font-family: "Courier New", Times, Monospaced, Serif;
+    font-family: "Consolas", Times serif;
     font-size: 14pt;
+    text-shadow: rgba(3, 0, 55, 0.91) 0 0 10px;
+}
+
+section h1{
+    font-size: 35pt;
+}
+
+section h2{
+    font-size: 30pt;
+}
+
+section h3{
+    font-size: 23pt;
 }
 
 a{
@@ -121,7 +133,7 @@ header{
     font-size: 1.2em;
     width: 80%;
     margin-left: 5%;
-    background-color: rgba(0, 0, 0, 0.81);
+    background-color: rgba(0, 0, 0, 0.86);
     padding: 60px;
 
 }
@@ -161,3 +173,65 @@ header{
     flex-wrap: nowrap !important;
 }
 
+.linkFormat{
+    background-color: #272727;
+    box-shadow: rgba(3, 0, 52, 0.56) 0 0 2px;
+    border: solid 2px #232323;
+    flex-wrap: wrap;
+    display: flex;
+}
+
+.linkFormat a{
+    text-decoration: none;
+}
+
+.linkFormat a:hover{
+    background-color: rgba(0, 0, 0, 0.29);
+    text-decoration: underline;
+}
+
+.videobox{
+    width: 100%;
+    min-height: 400px;
+}
+
+.box audio{
+    width: 100%;
+}
+
+.box .completeline{
+    width: 100%;
+}
+
+.flexContent .type1{
+    width: 100%;
+    min-width: 100%;
+}
+
+ul.coollist a{
+    color: #7eff6b;
+    text-decoration: none;
+}
+
+ul.coollist a:hover{
+    background-color: rgba(177, 247, 255, 0.49);
+    text-decoration: underline;
+}
+
+h1 code, h2 code, h3 code{
+    background-color: rgba(217, 253, 250, 0.89);
+    border: solid 1px #1aa0ff;
+    border-radius: 5px;
+    color: #1990e7;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-weight: bolder;
+    font-stretch: condensed;
+    font-style: oblique;
+}
+
+pre.code{
+    background-color: rgba(43, 43, 43, 0.85);
+    border: solid #1a86dc 4px;
+    border-radius: 20px;
+}
