--- a/site/styles/style2/css2.css
+++ b/site/styles/style2/css2.css
@@ -1,12 +1,20 @@
 body{
     background-color: white;
-    font-family: "Roboto", Arial, SansSerif;
+    font-family: "Roboto", Arial, sans-serif;
     min-height: 100vh;
     height: 100vh;
 }
 
 section h1{
-    font-size: 3em;
+    font-size: 40pt;
+}
+
+section h2{
+    font-size: 30pt;
+}
+
+section h3{
+    font-size: 25pt;
 }
 
 
@@ -61,12 +69,12 @@ section h1{
 
 .sidebar .sideMenu ul li{
     font-weight: bolder;
-    font-size: 1.1em;
+    font-size: 16pt;
 }
 
 .sidebar .sideMenu ul ul li{
     font-weight: normal;
-    font-size: 1.1em;
+    font-size: 16pt;
 }
 
 .sidebar .sideMenu ul li a{
@@ -109,8 +117,9 @@ hr .vertical{
 
 header h1{
     text-align: center;
-    width: 20%;
+    width: 70%;
     display: table;
+    font-size: 50pt;
 }
 
 .menu{
@@ -128,7 +137,7 @@ header h1{
     padding-bottom: 5px;
     padding-top: 5px;
 
-    font-size: 1.5em;
+    font-size: 16pt;
     transition: background-color 0.4s;
 }
 
@@ -142,7 +151,7 @@ header h1{
 
 
 header{
-    margin-top: -21px;
+    margin-top: -45px;
     width: 100%;
     display: block;
     background: url("../../media/images/pictures/bg4.jpg") left;
@@ -197,7 +206,6 @@ header{
 }
 
 .flexContent.typePerson{
-
     box-shadow: rgba(3, 0, 52, 0.56) 0 0 10px;
 }
 
@@ -205,4 +213,53 @@ header{
     flex-wrap: nowrap !important;
 }
 
+.linkFormat{
+    background-color: whitesmoke;
+    box-shadow: rgba(3, 0, 52, 0.48) 0 0 10px;
+    border: solid 2px #bbb4b7;
+    flex-wrap: wrap;
+    display: flex;
+}
 
+.linkFormat a{
+    text-decoration: none;
+}
+
+.linkFormat a:hover{
+    background-color: rgba(0, 0, 0, 0.29);
+    text-decoration: underline;
+}
+
+.videobox{
+    width: 100%;
+    min-height: 400px;
+}
+
+.box audio{
+    width: 100%;
+}
+
+.box .completeline{
+    width: 100%;
+}
+
+ul.coollist a{
+    color: #1e90ff;
+    text-decoration: none;
+}
+
+ul.coollist a:hover{
+    background-color: rgba(177, 247, 255, 0.49);
+    text-decoration: underline;
+}
+
+h1 code, h2 code, h3 code{
+    background-color: rgba(248, 241, 243, 1);
+    border: solid 1px #c6254e;
+    border-radius: 5px;
+    font-style: italic;
+    color: #c6254e;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-weight: lighter;
+}
