--- a/site/styles/common/commonStylesheet.css
+++ b/site/styles/common/commonStylesheet.css
@@ -127,6 +127,7 @@ footer.footer{
     width: 100%;
 }
 
+/*================ CLEAR LINK ============*/
 a.clear{
     text-decoration: none;
     color: inherit;
@@ -141,27 +142,52 @@ a.clear:hover{
     text-decoration: underline;
 }
 
+/*================ CODE AREA ============*/
 .code code {
     font-family: Courier, Monaco, monospace;
-    color: rgba(191, 242, 254, 1);
+    color: rgb(223, 247, 254);
 }
 
 pre.code{
     background-color: rgba(43, 43, 43, 1);
+    padding: 30px;
 }
 
+/*================ COOL LIST ============*/
 ul.coollist > li{
     margin-top: 50px;
 }
 
-ul.coollist > li > ul > li{
-    margin-top: 10px;
+ul.coollist > li > ul > li {
+    margin-top: 25px;
 }
 
 ul.coollist > li span{
     text-decoration: underline;
     font-weight: bold;
     font-size: 1.3em;
+}
+
+/*================ ICON OF A <h1>, <h2>, ... ============*/
+div.iconTitle{
+    background-position: left center;
+    width: 100%;
+    height: 50pt;
+    margin-top: 70px;
+    margin-bottom: 30px;
+    display: block;
+}
+
+
+div.iconTitle h1, div.iconTitle h2,  div.iconTitle h3, div.iconTitle h4{
+    width: 80%;
+    margin-left: 100px;
+    margin-top: 0;
+}
+
+/*================ IFRAME ============*/
+iframe{
+    border: none;
 }
 
 
