--- a/site/styles/style1/css1.css
+++ b/site/styles/style1/css1.css
@@ -1,3 +1,4 @@
+
 body{
     background: white url("../../media/images/pictures/bg16.jpg") center ;
     background-size: contain;
@@ -18,6 +19,16 @@ section h2{
 section h3{
     font-size: 23pt;
 }
+
+section h4{
+    font-size: 24pt;
+    font-style: italic;
+    border-left: #1a86dc 5px solid;
+    padding-left: 20px;
+    margin-left: 20px;
+    border-radius: 8px;
+}
+
 
 a{
     color: #19c618;
@@ -133,7 +144,7 @@ header{
     font-size: 1.2em;
     width: 80%;
     margin-left: 5%;
-    background-color: rgba(0, 0, 0, 0.86);
+    background-color: rgba(0, 0, 0, 0.89);
     padding: 60px;
 
 }
@@ -209,16 +220,16 @@ header{
 }
 
 ul.coollist a{
-    color: #7eff6b;
+    color: #38ff41;
     text-decoration: none;
 }
 
 ul.coollist a:hover{
-    background-color: rgba(177, 247, 255, 0.49);
+    background-color: rgba(62, 255, 81, 0.43);
     text-decoration: underline;
 }
 
-h1 code, h2 code, h3 code{
+h1 code, h2 code, h3 code, h4 code{
     background-color: rgba(217, 253, 250, 0.89);
     border: solid 1px #1aa0ff;
     border-radius: 5px;
@@ -226,8 +237,8 @@ h1 code, h2 code, h3 code{
     padding-left: 10px;
     padding-right: 10px;
     font-weight: bolder;
-    font-stretch: condensed;
     font-style: oblique;
+    text-shadow: none;
 }
 
 pre.code{
