--- a/site/styles/style2/css2.css
+++ b/site/styles/style2/css2.css
@@ -1,39 +1,34 @@
-body{
+body {
     background-color: white;
     font-family: "Roboto", Arial, sans-serif;
     min-height: 100vh;
     height: 100vh;
     font-size: 14pt;
 }
-
-.css1{
+.css1 {
     visibility: hidden;
 }
-
 /*================ TITLES INSIDE SECTIONS ============*/
-section h1{
+
+section h1 {
     font-size: 40pt;
 }
-
-section h2{
+section h2 {
     font-size: 30pt;
 }
-
-section h3{
+section h3 {
     font-size: 25pt;
 }
-
-h4{
+h4 {
     font-size: 23pt;
     font-style: italic;
     border-left: #2b292a 5px solid;
     padding-left: 20px;
     margin-left: 20px;
 }
-
-
 /*================ BUTTON SWAP CSS ============*/
-.swapBg{
+
+.swapBg {
     margin-top: 20px;
     margin-right: 5px;
     background-color: rgba(61, 216, 255, 0.37);
@@ -41,141 +36,122 @@ h4{
     color: #053b8d;
     font-weight: bold;
     cursor: pointer;
-
     float: right;
     margin-left: 92%;
     position: fixed;
     right: 0;
     border-radius: 100px;
 }
-
-.swapBg span{
+.swapBg span {
     line-height: 100px;
 }
-
-.swapBg:hover{
+.swapBg:hover {
     background-color: rgba(77, 226, 255, 0.82);
 }
-
 /*================ SIDEBAR ============*/
+
 .sidebar {
     display: block;
     float: right;
     width: 15%;
-
     height: 100%;
     color: black;
     margin-right: 5%;
     padding-left: 20px;
 }
-
-.sidebar .sideMenu{
+.sidebar .sideMenu {
     border-left: gray solid 3px;
     margin-top: 40%;
 }
-
-.sidebar .sideMenu ul li a:active{
+.sidebar .sideMenu ul li a:active {
     text-decoration: none;
     color: black;
 }
-
-.sidebar .sideMenu ul li{
+.sidebar .sideMenu ul li {
     font-weight: bolder;
     font-size: 16pt;
 }
-
-.sidebar .sideMenu ul ul li{
+.sidebar .sideMenu ul ul li {
     font-weight: normal;
     font-size: 16pt;
 }
-
-.sidebar .sideMenu ul li a{
+.sidebar .sideMenu ul li a {
     text-decoration: none;
     color: black;
 }
-
-.sidebar .sideMenu ul li{
+.sidebar .sideMenu ul li {
     list-style-type: none;
     padding: 5px;
     transition: background-color 0.5s, border 0.2s;
 }
-
-.sidebar .sideMenu ul li:hover{
+.sidebar .sideMenu ul li:hover {
     background-color: rgba(3, 0, 55, 0.35);
     border-left: 3px solid black;
 }
-
 /*================ TOP MENU ============*/
-header{
+
+header {
     margin-top: -45px;
     width: 100%;
     display: block;
     background: url("../../media/images/pictures/bg4.jpg") left;
 }
-
-header h1{
+header h1 {
     text-align: center;
     width: 70%;
     display: table;
     font-size: 50pt;
 }
-
-.menu ul li{
+.menu ul li {
     list-style-type: none;
     /*border-right: solid 1px #363d7c;*/
+
     border-left: solid 1px #363d7c;
 }
-
-.menu ul li:last-of-type{
+.menu ul li:last-of-type {
     list-style-type: none;
     border-right: solid 1px #363d7c;
 }
-
-.menu ul li:first-of-type{
+.menu ul li:first-of-type {
     list-style-type: none;
     border-left: solid 1px #363d7c;
 }
-
-
-.menu{
+.menu {
     display: flex;
     background-color: cornflowerblue;
     width: 100%;
 }
-
-.menu ul li{
-    display:inline;
-    font-size:16pt;
-    transition:background-color .4s;
-    padding:5px 25px
+.menu ul li {
+    display: inline;
+    font-size: 16pt;
+    transition: background-color .4s;
+    padding: 5px 25px
 }
-
-.menu ul li:hover{
+.menu ul li:hover {
     background-color: rgba(0, 0, 0, 0.52);
 }
-
-.menu ul{
+.menu ul {
     width: 100%;
 }
-
 /*================ CONTENT ============*/
-.content{
+
+.content {
     float: left;
     width: 70%;
     margin-left: 5%;
     background-color: rgba(249, 249, 249, 0.15);
 }
-
 /*================ FOOTER ============*/
-.footer{
+
+.footer {
     position: relative;
     display: block;
     float: left;
     background-color: cornflowerblue;
 }
-
 /*================ ICON ============*/
-.icon{
+
+.icon {
     min-height: 100px;
     min-width: 100px;
     float: left;
@@ -184,79 +160,75 @@ header h1{
     right: auto;
     display: block;
 }
-
 /*================ PERSON ============*/
-.personIcon{
+
+.personIcon {
     border-radius: 100%;
     border: solid 5px rgba(112, 106, 113, 0.53);
     background-color: lightblue;
     transition: border 0.2s, background-color 0.2s;
 }
-
-.personIcon:hover{
+.personIcon:hover {
     border: solid 5px rgba(117, 111, 118, 0.7);
     background-color: rgba(0, 191, 255, 0.58);
 }
-
-.wrappableFlexBoxContent{
+.wrappableFlexBoxContent {
     flex-wrap: wrap;
     justify-content: center;
     flex-grow: 0;
 }
-
-.flexContent.typePerson{
+.flexContent.typePerson {
     box-shadow: rgba(3, 0, 52, 0.56) 0 0 10px;
 }
-
-.flexNoWrap{
+.flexNoWrap {
     flex-wrap: nowrap !important;
 }
-
 /*================ LINKS ============*/
-.linkFormat{
+
+.linkFormat {
     background-color: whitesmoke;
     box-shadow: rgba(3, 0, 52, 0.48) 0 0 10px;
     border: solid 2px #bbb4b7;
     flex-wrap: wrap;
     display: flex;
 }
-
-.linkFormat a{
+.linkFormat a {
     text-decoration: none;
 }
-
-.linkFormat a:hover{
+.linkFormat a:hover {
     background-color: rgba(0, 0, 0, 0.29);
     text-decoration: underline;
 }
-
-.box .completeline{
+.box .completeline {
     width: 100%;
 }
-
 /*================ VIDEO ============*/
-.videobox{
+
+.videobox {
     width: 100%;
     min-height: 400px;
 }
-
 /*================ AUDIO ============*/
-.box audio{
+
+.box audio {
     width: 100%;
 }
 /*================ COOLLIST ============*/
-ul.coollist a{
+
+ul.coollist a {
     color: #FF634D;
     text-decoration: none;
 }
-
-ul.coollist a:hover{
+ul.coollist a:hover {
     background-color: rgba(255, 100, 72, 0.43);
     text-decoration: underline;
 }
-
 /*================ CODE ============*/
-h1 code, h2 code, h3 code, h4 code{
+
+h1 code,
+h2 code,
+h3 code,
+h4 code {
     background-color: rgba(248, 241, 243, 1);
     border: solid 1px #c6254e;
     border-radius: 5px;
