--- a/site/styles/style2/css2.css
+++ b/site/styles/style2/css2.css
@@ -177,9 +177,22 @@ header h1 {
     justify-content: center;
     flex-grow: 0;
 }
-.flexContent.typePerson {
-    box-shadow: rgba(3, 0, 52, 0.56) 0 0 10px;
+div.flexContent div.typePerson {
+    box-shadow: rgba(3, 0, 36, 0.69) 0 0 10px;
+    justify-content: center;
+    min-width: 130px;
+    width: 8%;
+    max-width: 15%;
+
+    padding-top: 30px;
+    padding-bottom: 100px;
 }
+
+div.flexContent div.typePerson:hover{
+    box-shadow: rgba(49, 50, 52, 0.98) 0 0 20px;
+    background-color: rgba(209, 217, 207, 0.63);
+}
+
 .flexNoWrap {
     flex-wrap: nowrap !important;
 }
